19990709-16:25 Eddie Runia
  * build32.bat; source/runner/runner.c; source/runner/run_exp.h;
    tests/working/hb32.bat; tests/working/runrdos.bat
  - tests/working/runner.c; tests/working/run_exp.h
    runner moved to /source/runner
  * source/vm/initsymb.c; include/init.h
    init symbols no longer worked both on Borland C++ Builder as well as
    DJGPP
  + source/compiler/harbour.l
    include bug for DJGPP resolved
  * tests/working/ainstest.prg
    copy error resolved


19990709-20:00 Andi Jahja <andij@aonlippo.co.id>
  + tests/broken/clasname.prg by Dave Pearson
  + tests/broken/statics1.prg by Bruno Cantero
  + tests/broken/statics2.prg by Bruno Cantero


19990709-11:05 CET Eddie Runia <eddie@runia.com>
  * source/compiler/harbour.y
    Copyright portable objects added

19990709-10:50 CET Eddie Runia <eddie@runia.com>
  * tests/working/*.prg
    identified my tests and moved them to the PD

19990709-10:30 CET Felipe Coury
  * tests/working/hscript/hscript.prg; tests/working/hscript/*.hs
    Copyright & GPL inserted


19990708-20:05 EDT David G. Holm <dholm@jsd-llc.com>
 + Added my email address to my Coypright notice in each of the following:
  * include/fileio.ch
  * include/filesys.api
  * include/filesys.h
  * include/set.ch
  * include/set.h
  * include/version.h
  * source/rtl/console.c
  * source/rtl/dates.c
  * source/rtl/devoutp.prg
  * source/rtl/set.c
  * source/rtl/strcmp.c
  * tests/working/output.prg
  * tests/working/round.prg
  * tests/working/scroll.prg
  * tests/working/seconds.prg
  * tests/working/version.prg

19990708-18:20 EDT David G. Holm <dholm@jsd-llc.com>
  * makefile.icc
    + Have to create a dummy unistd.h in the include directory after
      running bison and then delete it after building harbour.exe,
      because GNU bison adds "#include <unistd.h>" for C++ mode, but
      the IBM Visual Age C++ 3.0 compiler doesn't have such a file.
  * config/dos/global.cf
    Added individual -$(RM) commands for *.bak, *.obj, core, and *.o,