@@ -1,3 +1,10 @@
+19990709-18:21 Antonio Linares <alinares@fivetech.com>
+  + source/compiler/harbour.l
+    added support for ppo #line token
+    Described line bug was mine. Fixed!
+  + source/compiler/harbour.y
+    added support for ppo #line syntax (including XBase++ style)
+
 19990709-16:25 Eddie Runia
   * build32.bat; source/runner/runner.c; source/runner/run_exp.h;
     tests/working/hb32.bat; tests/working/runrdos.bat
